--- a/pokeAPI/Base.lproj/Main.storyboard
+++ b/pokeAPI/Base.lproj/Main.storyboard
@@ -18,17 +18,21 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="cqa-XA-D0k">
-                                <rect key="frame" x="87" y="234" width="240" height="128"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="cqa-XA-D0k">
+                                <rect key="frame" x="0.0" y="39" width="414" height="818"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="cqa-XA-D0k" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="0A4-Y1-DYb"/>
+                            <constraint firstItem="cqa-XA-D0k" firstAttribute="width" secondItem="6Tk-OE-BBY" secondAttribute="width" id="CVJ-RB-PBM"/>
+                            <constraint firstItem="cqa-XA-D0k" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="EuJ-6X-gQ4"/>
+                            <constraint firstItem="cqa-XA-D0k" firstAttribute="height" secondItem="6Tk-OE-BBY" secondAttribute="height" id="bRp-q6-hLr"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <connections>
-                        <outlet property="action" destination="cqa-XA-D0k" id="CeC-yf-hcF"/>
                         <outlet property="tableView" destination="cqa-XA-D0k" id="jpD-BY-tr3"/>
                     </connections>
                 </viewController>
